@@ -4,6 +4,7 @@
 
   [#15519] AT90CAN* processors incorrectly identified as "AT90S family"
   [#15522] Typo in iotn2313.h vector table
+  [#15595] GPIOR0 misspelled for ATtiny25/45/85
   
 * New devices supported:
 
